# llmeter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-20-stateful-passive-collection.md  2026-07-21-curl-release.md  2026-07-21-grok-unified-metrics.md  2026-07-21-live-session-correlation-fix.md  2026-07-22-codex-large-rollout-correlation.md  2026-07-22-direct-token-rate-calculation.md
docs/superpowers/specs/: 2026-07-20-stateful-passive-collection-design.md  2026-07-21-curl-release-design.md  2026-07-21-grok-unified-metrics-design.md  2026-07-21-live-session-correlation-fix-design.md  2026-07-22-codex-large-rollout-correlation-design.md  2026-07-22-direct-token-rate-calculation-design.md
examples/: normalized-session.jsonl
scripts/: install.sh  test-install-sh.sh
src/: aggregate.rs  cli.rs  discovery.rs  journal.rs  lib.rs  live.rs  main.rs  model.rs  registry.rs  runtime.rs  runtime_live.rs  setup.rs  tui.rs
src/adapters/: claude.rs  codex.rs  common.rs  droid.rs  gemini.rs  grok_build.rs  kiro.rs  mod.rs  opencode.rs  pi.rs  qwen.rs
src/adapters/grok_build/: helpers_core.rs  helpers_usage.rs  (+6 more)
src/aggregate/: part0.rs  part1.rs  part2.rs  part3.rs
src/live/: correlation.rs  cursor.rs  source_catalog.rs
tests/: adapters_grok_build.rs  adapters_phase1.rs  adapters_phase2.rs  aggregate.rs  journal.rs  live_collection.rs  registry.rs  runtime_api.rs  setup.rs
tests/fixtures/: claude.jsonl  codex.jsonl  droid.jsonl  gemini.jsonl  grok_build.jsonl  kiro.jsonl  opencode.jsonl  pi.jsonl  qwen.jsonl
