[package]
name = "llmeter"
version = "0.1.3"
edition = "2021"
rust-version = "1.85"
description = "A privacy-first TUI meter for live LLM coding-agent sessions"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "6.0"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
unicode-width = "0.2"
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = "thin"
strip = "symbols"
